Add server command

--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "watch": "^1.0.2"
   },
   "scripts": {
-    "start": "npm run build:watch",
     "mutations": "immutable-css src/tachyons.css --strict",
     "build": "npm run build:css && npm run build:minify",
     "build:css": "tachyons src/tachyons.css > css/tachyons.css",
     "build:minify": "tachyons src/tachyons.css -m > css/tachyons.min.css",
-    "build:watch": "watch \"npm run build\" ./src/"
+    "build:watch": "watch \"npm run build\" ./src/",
+    "server": "browser-sync start --server --files \"css/*.css\"",
+    "start": "npm run build:watch"
   }
 }
